# llm-api-router

./: .gitignore  README.md  README_zh.md  TASK_1.3_SUMMARY.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: agent-request.yml
.github/agent/: config.yml  install-manifest.json
.github/instructions/: llm-api-router-python.instructions.md
.github/scripts/: create-phase-issue.js  create-tasks.js  dispatch-agent-request-intake.js  dispatch-task.js  handle-task-pr-merge.js  handle-task-pr-progress.js  identify-pr-type.js  reconcile-state.js  trigger-ci.js
.github/workflows/: agent-bootstrap.yml  agent-ci.yml  agent-commands.yml  agent-intake.yml  agent-merge-policy.yml  agent-plan-validation.yml  agent-pr-router.yml  agent-task-creator.yml  agent-task-dispatcher.yml  ci.yml  manual-request-dispatch.yml  release.yml  tests.yml
.worktree/: TASK_3.2_SUMMARY.md  TASK_3.4_SUMMARY.md  extension_proposals.md  optimization_proposals.md  task_breakdown.md
docs/: PHASE1_FEATURES.md  PHASE1_SUMMARY.md  cli.md  connection_pool_optimization.md  contributing.md  conversation-management.md  error-handling.md  faq.md  index.md  langchain-integration.md  load-balancer.md  logging.md  metrics.md  prompt-templates.md  rate-limiter.md
docs/api-reference/: client.md  exceptions.md  types.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: caching.md  configuration.md  providers.md
examples/: README.md  cache_example.py  chatbot_demo.py  config_from_files.py  config_management.py  connection_pool_optimization.py  conversation_example.py  embeddings_example.py  error_handling_example.py  function_calling_example.py  grafana_dashboard.json  langchain_integration_example.py  load_balancer_example.py  logging_example.py  metrics_example.py  multi_turn_function_calling.py  ollama_example.py  provider_switcher.py  quick_start.py  rag_example.py  rate_limiter_example.py  templates_example.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/cli/: index.html
site/connection_pool_optimization/: index.html
site/contributing/: index.html
site/conversation-management/: index.html
tests/: README.md  conftest.py
worktree/: README.md
(+83 files in other folders)
